--- a/Course_Schedule.Rmd
+++ b/Course_Schedule.Rmd
@@ -1,5 +1,5 @@
 ---
-title: SISMID 2021 Course Schedule
+title: SISMID 2022 Course Schedule
 subtitle: ""
 author: Andreas Handel
 institute: "University of Georgia"
@@ -14,9 +14,10 @@ This is the schedule for the course. From here, you can access all instructions 
 
 **This schedule is subject to change, so check regularly for updates. We will also adjust as needed, e.g. if we run over or end early, we just move breaks around. It's the same Zoom link for all meetings (see Slack for link).**
 
+
 ## Notes
 
-* SISMID was online last year and we recorded our lectures. Instead of repeating the same lectures from last year, we figured you will get more out of the course if you watch (some of) our lectures from last year on your own time in advance, and then in our Zoom meetings we will just be emphasizing some of the highlights of our lectures, followed by discussion and Q&A time. **This only works if you actually watch the lectures. If not, you'll likely feel lost. You have been warned `r emoji::emoji('smile')`.**
+* SISMID was online in 2020-2021 and we recorded our lectures. Instead of repeating the same lectures we gave previously, we figured you will get more out of the course if you watch (some of) our lectures from last year on your own time in advance, and then in our Zoom meetings we will just be emphasizing some of the highlights of our lectures, followed by discussion and Q&A time. **This only works if you actually watch the lectures. If not, you'll likely feel lost. You have been warned `r emoji::emoji('smile')`.**
 
 
 * **Time zones:** Seattle is in the PT zone. Your instructors are in ET (Andreas) and CT (Paul) zones. Some of you are likely in yet other locations and time zones. We hope we can keep things straight. For any times in this course **we will use PT/Seattle time as reference.** We also plan to be clear when posting any time by stating the time zone explicitly. If ever in doubt, i.e. if you see us posting a time without specifying the zone, please tell us to clarify. 
@@ -38,7 +39,7 @@ This is the schedule for the course. From here, you can access all instructions 
 ***
 
 
-## Wednesday 2020-07-14, 11.30PT - 2.30PT
+## Wednesday 2020-07-20, 11.30PT - 2.30PT
 
 **As preparation before we meet, do the following:**
 
@@ -64,7 +65,7 @@ Rest of day - On your own: Explore DSAIRM. Go through SMI materials. Prepare for
 
 ***
 
-## Thursday 2020-07-15, 8PT - 2.30PT
+## Thursday 2020-07-21, 8PT - 2.30PT
 
 **As preparation before we meet, do the following:**
 
@@ -105,7 +106,7 @@ Rest of day - On your own: Explore DSAIRM. Go through SMI materials. Prepare for
 
 ***
 
-## Friday 2020-07-16, 8PT - 2.30PT
+## Friday 2020-07-22, 8PT - 2.30PT
 
 **As preparation before we meet, do the following:**
 
