--- a/Course_Syllabus.Rmd
+++ b/Course_Syllabus.Rmd
@@ -13,7 +13,7 @@ output:
 ## Course Information
 
 * Instructors: Paul Thomas and Andreas Handel
-* Course Meeting Time and Location: 2021-07-14 - 2021-07-16, online
+* Course Meeting Time and Location: 2022-07-20 - 2022-07-22, online
 
 ## Textbook and Other Course Material
 
@@ -32,17 +32,21 @@ This course has no grades. You will get a certificate of completion at the end.
 
 ## Class Attendance
 
-This class is online. We hope you will attend all synchronous events as much as possible. In addition, there is some work you should do before each synchronous session. 
+This class is online. Attendance is not required, but we hope you will attend all synchronous events as much as possible. In addition, there is some work you should do before each synchronous session. 
+
+We also hope that you will be an active participant and ask questions, join discussions, and contribute in any way you feel willing and able.
 
 
 ## Prerequisites
 
 We assume you have some basic biological and computer literacy. Some of you may know some immunology, or have some statistical, modeling or coding experience. We understand every student will come with different skill sets. Since this is an introductory course, we try to make things as understandable as possible for anyone, no matter their previous knowledge. That means that some of the material might be too basic for you, will others will be new to you (and likely challenging). 
 
+We "promise" that you will feel bored and you will feel lost at least once during the course `r emoji::emoji('grin')`. We hope that you will still find the majority of the material we teach interesting and helpful. Please don't hesitate to give us feedback during the course (in real time) if you think we are going too slow or too fast.
+
 
 ## Getting Help
 
-If you have questions about any aspect of the course, please do not hesitate to ask for help. The course materials describe in detail the ways you can ask for help. See the __Communication__ section for more details.
+If you have questions about any aspect of the course, please do not hesitate to ask for help. See the __Communication__ section for more details.
 
 
 ## Course Outline
