--- a/Course_Project.Rmd
+++ b/Course_Project.Rmd
@@ -17,7 +17,7 @@ This document contains suggestions for a completely optional course project. If 
 
 # Project Topic Ideas
 
-You might already have a specific question or system in mind that you are interested in modeling. Or maybe this course leads to some ideas. If you are new to modeling, it might be difficult to decide what questions can be suitably addressed using simulations models. Some thoughts on this can be found [in this review paper we wrote](http://handelgroup.uga.edu/publication/2020-handel-natrevimm/). We discuss 3 major model uses, namely _Exploration_, _Prediction_ and _Fitting_.
+You might already have a specific question or system in mind that you are interested in modeling. Or maybe this course leads to some ideas. If you are new to modeling, it might be difficult to decide what questions can be suitably addressed using simulations models. Some thoughts on this can be found [in this review paper we wrote](./media/2020-handel-natrevimm.pdf). We discuss 3 major model uses, namely _Exploration_, _Prediction_ and _Fitting_.
 
 Given the shortness of time and the complexity of the approach, doing something that involves fitting data to models is maybe not suitable, unless you already have good R coding and model fitting experience (e.g. fitting statistical/phenomenological models). I suggest that if you want to try a project within the timeframe of the course, focus on doing an _Exploration_ project.  
 
@@ -37,7 +37,9 @@ Here are some general pointers on how you could go about doing a project, depend
 * **Requires some model building and coding:** Use the [modelbuilder](https://ahgroup.github.io/modelbuilder/) R package to build an initial version of your model. Export the model code from _modelbuilder_, edit further and run the code to answer your question. 
 
 
+
 # Project Logistics
+
 To repeat, this is completely optional, so if you don't have the time or interest, you can just focus on learning the course material and not try your own project. If you do try, it is completely up to you how to structure your project. You can just play around, or you can try to write a formal report/paper (e.g., using RMarkdown). Given the shortness of time, it might be tricky to try and form teams with others and do a project as a group, but you are certainly welcome to try and do so. You can use the _**course-project**_ Slack channel to see if you can find others to team up with.
 
 If you get results from your project that you think are worth sharing, let everyone know on Slack. We will be happy to provide feedback and comments at any stage of your project. If any projects advance enough and have enough results that it is worth sharing with the group, we plan to allow some time in our closing Zoom session for anyone who wants to present their findings. If you want to do that, let us know beforehand.
