--- a/Course_Schedule.Rmd
+++ b/Course_Schedule.Rmd
@@ -34,7 +34,11 @@ This is the schedule for the course. From here, you can access all instructions 
 * Familiarize yourself with this website. Read through all of it.
 * Post an Introduction to the _introductions-networking_ Slack channel. See the pinned post in that channel for instructions.
 * Browse through our paper [Simulation Modelling for Immunologists](./media/2020-handel-natrevimm.pdf).
-* Set up the tools needed for this course, namely R, Rstudio and the DSAIRM package. Instructions on how to do that can be found in the _**Software Setup**_ module of the [SMI site](https://andreashandel.github.io/SMIcourse).
+* Set up the tools needed for this course, namely R, Rstudio and the DSAIRM package. 
+  - [Here are instructions for setting up R and RStudio.](https://andreashandel.github.io/SMIcourse/R_and_RStudio.html).
+  - [This explains how to install and use the DSAIRM package.](https://andreashandel.github.io/SMIcourse/Introduction_to_DSAIRM.html).
+  - [This is the DSAIRM website with more details.](https://ahgroup.github.io/DSAIRM/)
+* __Make sure you install the latest version of DSAIRM, which is 0.9.5. You'll see which version you have on the main menu screen.__
 * If you can, take a look at these apps in DSAIRM: __Basic Bacteria Model__ and __Basic Virus Model__. Play around with them and go through (some of) the tasks to get familiar with DSAIRM.
 
 
@@ -75,7 +79,7 @@ Rest of day - On your own: Explore DSAIRM. Go through SMI materials. Prepare for
 
 * Watch any of the lecture recordings on viral infections and immunology from the last years on the [SMI site](https://andreashandel.github.io/SMIcourse/). We will not repeat most of those topics this year, but we are happy to discuss any of those pathogens and topics in the Q&A, so if any of those viruses interest you, watch the lecture and come with questions for discussion, either during the Q&A or on Slack.  
 
-* If you haven't already, take a look at the __Basic Bacteria Model__ and __Basic Virus Model__ apps in DSAIRM. Read the information describing the models and play around with them. If you want to continue, take a look at the __Acute Virus and IR Model__ and
+* Make sure you have [DSAIRM](https://ahgroup.github.io/DSAIRM/) up and running, and have explored the __Basic Bacteria Model__ and __Basic Virus Model__ apps. Read the information describing the models and play around with them. If you have time, also take a look at the __Acute Virus and IR Model__ and
 __Chronic Virus and IR Model__ apps, which we'll be using today.
 
 
@@ -111,9 +115,9 @@ Rest of day - On your own: Explore DSAIRM. Go through SMI materials. Prepare for
 
 **As preparation before we meet, do the following:**
 
-* Go through the __Parameter Uncertainty__ unit on SMI, which you can [find here](https://andreashandel.github.io/SMIcourse/Parameter_Uncertainty_and_Sensitivity.html).
+* Watch any of the lecture recordings on bacterial infections and immunology from the last years on the [SMI site](https://andreashandel.github.io/SMIcourse/). We will not repeat most of those topics this year, but we are happy to discuss any of those pathogens and topics in the Q&A or on Slack.  
 
-* Take a look at the __Extended Bacteria Model__ apps in DSAIRM, which we'll be exploring today. If you can, also take a brief look at the __Model Variant Exploration__ app, we'll do something similar with the bacteria model today. 
+* Take a look at the __Extended Bacteria Model__ apps in DSAIRM, which we'll be exploring today. 
 
 ***
 
