--- a/Course_Schedule.Rmd
+++ b/Course_Schedule.Rmd
@@ -12,7 +12,7 @@ output:
 
 This is the schedule for the course. From here, you can access all instructions and materials to help you prepare. 
 
-**This schedule is subject to change, so check regularly for updates. We will also adjust as needed, e.g. if we run over or end early, we just move breaks around. It's the same Zoom link for all meetings (see Slack for link).**
+**This schedule is subject to change, so check regularly for updates. We will also adjust as needed, e.g. if we run over or end early, we just move breaks around. It's the same Zoom link for all meetings (see Slack Announcement channel for link).**
 
 
 ## Notes
@@ -35,8 +35,8 @@ This is the schedule for the course. From here, you can access all instructions 
 * Post an Introduction to the _introductions-networking_ Slack channel. See the pinned post in that channel for instructions.
 * Browse through our paper [Simulation Modelling for Immunologists](./media/2020-handel-natrevimm.pdf).
 * Set up the tools needed for this course, namely R, Rstudio and the DSAIRM package. 
-  - [Here are instructions for setting up R and RStudio.](https://andreashandel.github.io/SMIcourse/R_and_RStudio.html).
-  - [This explains how to install and use the DSAIRM package.](https://andreashandel.github.io/SMIcourse/Introduction_to_DSAIRM.html).
+  - [Here are instructions for setting up R and RStudio.](https://andreashandel.github.io/SMIcourse/R_and_RStudio.html)
+  - [This explains how to install and use the DSAIRM package.](https://andreashandel.github.io/SMIcourse/Introduction_to_DSAIRM.html)
   - [This is the DSAIRM website with more details.](https://ahgroup.github.io/DSAIRM/)
 * __Make sure you install the latest version of DSAIRM, which is 0.9.5. You'll see which version you have on the main menu screen.__
 * If you can, take a look at these apps in DSAIRM: __Basic Bacteria Model__ and __Basic Virus Model__. Play around with them and go through (some of) the tasks to get familiar with DSAIRM.
